--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "inator"
+authors = ["Will Sturgeon <willstrgn@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
+description = "Fast declarative zero-copy parsers via nondeterministic finite automata."
+license = "MPL-2.0"
+repository = "github.com/wrsturgeon/inator"
+readme = "README.md"
+keywords = ["parsing", "parser", "no_std"]
+categories = ["parsing", "no-std", "no-std::no-alloc", "encoding", "compilers"]
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
