--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ syn = { version = "2.0.34", features = ["full"] }
 
 # Optional dependencies:
 quickcheck = { version = "1.0.3", optional = true }
+rand = "0.8.5"
 
 [features]
 quickcheck = ["dep:quickcheck"]
