--- a/examples/tuple/Cargo.toml
+++ b/examples/tuple/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "example"
+name = "inator-tuple"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
 [build-dependencies]
-inator = { path = ".." }
+inator = { path = "../.." }
 
 [dependencies]
 quickcheck = "1.0.3"
