10x tests per property

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,8 @@ on:
     branches: [ "main" ]
 
 env:
-  CARGO_TERM_COLOR: always
-  RUST_BACKTRACE: 1
-  QUICKCHECK_TESTS: 10000
+  RUST_BACKTRACE: full
+  QUICKCHECK_TESTS: 100000
 
 jobs:
   build:
