--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ build = "build.rs"
 
 [dependencies]
 inator-automata = { path = "automata" }
+
+# Optional dependencies:
+quickcheck = { version = "1.0.3", optional = true }
+
+[features]
+quickcheck = ["dep:quickcheck"]
