Prepare to use fallback to return

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ license = "MPL-2.0"
 repository = "https://github.com/wrsturgeon/inator"
 build = "build.rs"
 
+[workspace]
+members = [
+  "automata",
+  "automata/examples/matched_parentheses_codegen",
+  "examples/json",
+]
+
 [dependencies]
 inator-automata = { path = "automata" }
 
